node: Implicitly convert numeric types

When retrieving an int, a double, or a boolean, we can use the C rules
of implicit conversion to move from the actual stored type inside the
JsonValue to the requested C type.

https://bugzilla.gnome.org/show_bug.cgi?id=660795